  _____ _    _ __  __  _____          
 / ____| |  | |  \/  |/ ____|   /\    
| |  __| |  | | \  / | |  __   /  \   
| | |_ | |  | | |\/| | | |_ | / /\ \  
| |__| | |__| | |  | | |__| |/ ____ \ 
 \_____|\____/|_|  |_|\_____/_/    \_\

=======================================
Framework Backend
3.0.4
    -
3.0.3
    - GumgaCacheRequestFilterV2

3.0.2
    - Correção no GQuery com distinct

3.0.1
    - Correção no endpoint(/operationskeys/{software}/{token:.+}) da classe GumgaSecurityProxy. Validar se o valor é diferente de null

3.0.0
    - O tamanho das colunas gumga_orgs e gumga_users da classe GumgaSharedModel foi aumentado para 4000 caracteres.

2.0.3
    - QueryObject com a opção de fazer o count na tabela, por padrão ele vem true
    - GQuery com a opção de utilizar distinct no select, por padrão ele vem false

2.0.2
    - GumgaGateway, GumgaDTOAPI: Deprecated, Utilizar GumgaGatewayV2 e GumgaDTOAPIV2
    - Correção no Criteria ao utilizar between com valores do tipo date

    ------------------------------------- ATENÇÃO ------------------------------------------
    - Devido a diversas solicitações, foi alterado o tipo da entidade GumgaReport para Lob;
         * Se você utiliza liquibase, deve-se alterar o tipo da coluna:

           ** MySQL **
           <changeSet author="liquibase-docs" id="modifyDataType-example">
               <preConditions onFail="MARK_RAN">
                   <not>
                       <columnExists tableName="gum_rep" columnName="definition"></columnExists>
                   </not>
               </preConditions>
               <modifyDataType
                       columnName="definition"
                       newDataType="LONGTEXT"
                       tableName="gum_rep"/>
           </changeSet>

           ** Oracle **
            <changeSet author="liquibase-docs" id="modifyDataType-example">
               <preConditions onFail="MARK_RAN">
                  <not>